--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,9 @@
     "next": "^12.3.1",
     "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.8.1",
+    "react-redux": "^8.0.4",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
