--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -1,23 +1,34 @@
 {
-  "parserOptions" :{
-    "ecamVersion" : 2022,
-    "sourceType":"module",
-    "ecamFeatures":{
-      "jsx" : true
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
     }
   },
-  "env" : {
-    "browser":true,
-    "node":true,
-    "ES6":true
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
   },
-  "extends" : [
-    "eslint:recommended",
-    "plugin:react/recommended"
+  "extends": [
+    "airbnb"
   ],
-  "plugins":[
+  "plugins": [
     "import",
-    "react",
     "react-hooks"
-  ]
+  ],
+  "rules": {
+    "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "no-console": "off",
+    "no-underscore-dangle": "off",
+    "react/forbid-prop-types": "off",
+    "react/jsx-filename-extension": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "object-curly-newline": "off",
+    "linebreak-style": "off",
+    "no-param-reassign": "off"
+  }
 }
