--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.23.5",
+    "immer": "^9.0.15",
     "next": "^12.3.1",
     "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.8.1",
