--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "next -p 3060",
     "bulid": "next build"
   },
   "author": "SEONG SEUNG YOUNG",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.23.5",
+    "axios": "^1.1.3",
     "immer": "^9.0.15",
     "next": "^12.3.1",
     "next-redux-wrapper": "^6.0.2",
