--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.23.5",
     "axios": "^1.1.3",
+    "babel-plugin-styled-components": "^2.0.7",
     "immer": "^9.0.15",
     "next": "^12.3.1",
     "next-redux-wrapper": "^6.0.2",
