--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app",
-    "start": "cross-env NODE_ENV=production npx pm2 start app.js"
+    "start": "cross-env NODE_ENV=production node app.js",
+    "pm2":"cross-env NODE_ENV=production npx pm2 start app.js"
   },
   "author": "SEONG",
   "license": "MIT",
