--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon app",
     "start": "cross-env NODE_ENV=production node app.js",
-    "pm2":"cross-env NODE_ENV=production npx pm2 start app.js"
+    "pm2": "cross-env NODE_ENV=production npx pm2 start app.js"
   },
   "author": "SEONG",
   "license": "MIT",
@@ -24,6 +24,7 @@
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
+    "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.25.2",
     "sequelize-cli": "^6.5.1"
