--- a/front/.babelrc
+++ b/front/.babelrc
@@ -7,7 +7,9 @@
       "babel-plugin-styled-components",
       {
         "ssr": true,
-        "displayName": true
+        "displayName": true,
+        "preprocess": false
+
       }
     ]
   ]
