--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.2.1",
+    "socket.io-client": "^4.5.3",
     "styled-components": "^5.3.6",
     "swr": "^1.3.0"
   },
